changed flex position of the home image to avoid white space in smaller screens

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -5,7 +5,7 @@
 
 .container{
     margin: 3%;
-    max-height: 100vh;
+    height: 100vh;
   
     @include flex(display, flex);
     @include flex(flex-direction, row);
@@ -87,7 +87,7 @@
     .img-intro {
   
       @include flex(flex-shrink, 1);
-      @include flex(align-self, flex-end);
+      @include flex(align-self, center);
   
       width: 900px;
       opacity: 0.8;
